Merged behaviour-redo into trunk